--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
   @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
 h1 {
-    color: purple;
+    font-family: 'Caveat Brush' , cursive;
 }
 .navbar-pink {
     background-color: pink;
