--- a/style.css
+++ b/style.css
@@ -1,30 +1,62 @@
-  @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
-h1 {
-    font-family: 'Caveat Brush' , cursive;
-}
+/* Navbar */
 .navbar-pink {
     background-color: pink;
-}
-#about, #experiences {
+  }
+  
+  /* Dark Mode */
+  .dark-mode {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  /* About Section */
+  #about {
     padding: 40px;
-}
-.about-detail {
+  }
+  
+  .about-detail {
     display: flex;
     flex-direction: row;
-}
-.about-description {
+  }
+  
+  .about-description {
     padding: 40px;
-}
-.title {
-    font-family:'Caveat Brush', cursive;
+  }
+  
+  .title {
+    font-family: 'Caveat Brush', cursive;
     text-align: center;
     margin-bottom: 40px;
-}
-.bg-pink {
+  }
+  
+  .bg-pink {
     background-color: #ffbbe0;
-}
-.navbar {
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-}
+  }
+  
+  /* Experiences Section */
+  .row1 {
+    text-align: center;
+    background-color: lightgray;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  .col {
+    text-align: left;
+    padding: 20px;
+  }
+  
+  /* Education Section */
+  .row2 {
+    text-align: center;
+    background-color: lightgray;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  /* Additional Styling */
+  .color {
+    color: white;
+    font-size: 24px;
+  }
+  
