--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');  
 /* Navbar */
 .navbar-pink {
     background-color: pink;
@@ -7,6 +8,11 @@
   .dark-mode {
     background-color: #333;
     color: #fff;
+  }
+  
+  /* Set font family for all elements */
+  body {
+    font-family: 'Caveat Brush', cursive;
   }
   
   /* About Section */
@@ -24,7 +30,7 @@
   }
   
   .title {
-    font-family: 'Caveat Brush', cursive;
+    font-family: 'Caveat', cursive;
     text-align: center;
     margin-bottom: 40px;
   }
